<resources>
    <string name="app_name">cookbook</string>
    <string name="view_photo">browse photo</string>
    <string name="no_img_found">no image found.</string>
    <string name="draw_ball">draw a ball</string>
    <string name="edit_text">edit text</string>
    <string name="text_edit_hint">input some text</string>
    <string name="ripple_button">ripple test</string>
    <string name="ripple_text"> ripple test example</string>
    <string name="shape_button_title"> draw shapes</string>
    <string name="word">draw text and picture</string>
    <string name="radio_button_title"> radio button and check box</string>
    <string name="color_red">red</string>
    <string name="color_blue">blue</string>
    <string name="checkbox_title">Choose the fruits you like.</string>
    <string name="checkbox_apple">apple</string>
    <string name="checkbox_banana">banana</string>
    <string name="checkbox_orange">orange</string>
    <string name="toggle_button_on_title">turn on the light</string>
    <string name="toggle_button_off_title">turn off the light</string>
    <string name="toggle_button_title">toggle button test</string>
    <string name="fab_button_title">fab button test</string>
    <string name="progress_button_title">progress bar test</string>
    <string name="view_switcher_first">This is the first view</string>
    <string name="view_switcher_second">This is the second view</string>
    <string name="view_switcher_title">Test switcher</string>
    <string name="view_switcher_button">Next</string>
    <string name="img_switcher_title">Test image switcher</string>
</resources>
