<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/photo_view_button"
        android:background="@drawable/two_states_button"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:text="@string/view_photo"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/custom_view"
        android:text="@string/draw_ball"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_edit_button"
        android:text="@string/edit_text"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/custom_ripple"
        android:text="@string/ripple_button"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/shape_button"
        android:text="@string/shape_button_title"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radio_button"
        android:text="@string/radio_button_title"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/toggle_button"
        android:text="@string/toggle_button_title"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fab_button"
        android:text="@string/fab_button_title"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progress_button"
        android:text="@string/progress_button_title"/>

    <Button
        android:id="@+id/view_switcher_test_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_switcher_title"/>

</LinearLayout>