<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- 定义一组单选按钮 -->
    <RadioGroup android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <!-- 定义单选按钮, 红色为选中状态 -->
        <RadioButton
            android:id="@+id/radio_button_red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/color_red"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/radio_button_blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/color_blue"/>

    </RadioGroup>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="50dp">

        <TextView
            android:id="@+id/text_view_fruits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/checkbox_title"
            android:layout_marginBottom="30dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <!-- 定义一组复选按钮 -->
            <CheckBox
                android:id="@+id/checkbox_apple"
                android:checked="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkbox_apple"/>

            <CheckBox
                android:id="@+id/checkbox_banana"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkbox_banana"/>
            <CheckBox
                android:id="@+id/checkbox_orange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkbox_orange"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>