<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <ViewSwitcher
        android:id="@+id/view_switcher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:inAnimation="@android:anim/slide_in_left">

        <LinearLayout
            android:id="@+id/layout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_switcher_first"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_switcher_second"/>
        </LinearLayout>
    </ViewSwitcher>

    <Button
        android:id="@+id/view_switcher_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_switcher_button"/>
</LinearLayout>